--- a/templates/listPatientHistoryTable.vm
+++ b/templates/listPatientHistoryTable.vm
@@ -3,7 +3,7 @@
 	#foreach( $history in $patient_history  )
 		
 		#if( $count == 0 )
-			<table cellpadding="0" cellspacing="0" border="0" class="display" id="history$history.patient_id">
+			<table cellpadding="0" cellspacing="0" border="0" class="display" id="History$history.patient_id">
 			<thead><tr><th>History Title</th><th>Note</th><th>Priority</th></tr></thead><tbody>
 		#end
 		<tr class="gradeX">
