--- a/templates/listPatientsTable.vm
+++ b/templates/listPatientsTable.vm
@@ -1,4 +1,4 @@
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="example$repository">
+<table cellpadding="0" cellspacing="0" border="0" class="display" id="Repository$repository">
 <thead><tr><th></th><th></th></tr></thead><tbody>
 #if ($patients)
 	#foreach( $patient in $patients )
