--- a/templates/listPatientMedsVert.vm
+++ b/templates/listPatientMedsVert.vm
@@ -1,13 +1,23 @@
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="Medications$patient_id">
-<thead><tr><th></th><th></th><th></th></tr></thead><tbody>
+#set ($space = " ")    #* This is necessary because velocity removes the spaces between different objects *#
+#set ($oparen = "(")
+#set ($cparen = ")")
+
 #foreach( $medication in $medications )
-<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Manufacturer Info</td><td value="$medication.medicationInformation.manufacturedMaterial.freeTextBrandName">$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td></tr>
-<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Patient Information</td><td value="$medication.patientInstructions">$medication.patientInstructions</td></tr>
-<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Effective Time</td><td value="$medication.effectiveTime.value">$medication.effectiveTime.value</td></tr>
-<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Dose</td><td value="$medication.dose.value">$medication.dose.value</td></tr>
-<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Delivery Method</td><td value="$medication.deliveryMethod.value">$medication.deliveryMethod.value</td></tr>
-<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Narrative</td><td value="$medication.narrative">$medication.narrative</td></tr>
+    <b>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</b><br/>
+        ## <li>Manufacturer Info: $medication.medicationInformation.manufacturedMaterial.freeTextBrandName
+        #if($medication.effectiveTime.value)
+            <span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>Started  $medication.effectiveTime.value<br clear="all"/>
+        #end
+        #if($medication.dose.value)
+            <span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>Dosage: $medication.dose.value<br clear="all"/>
+            #if($medication.deliveryMethod.value)
+                $oparen $medication.deliveryMethod.value $cparen
+            #end
+        #end
+        #if($medication.patientInstructions)
+            <span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>Instructions: $medication.patientInstructions<br clear="all"/>
+        #end
+    ## Narrative: $medication.narrative
+    <br/>
 #end
-</tbody>
-<table>
 
