--- a/templates/inettutsHead.vm
+++ b/templates/inettutsHead.vm
@@ -1,4 +1,4 @@
-<div id = ${name}${patient_id} class = "id">
+<div id = ${name}${rep_patient_id} class = "id">
 <div class="widget color-2" id="yellow-widget$id">
 
     	<div style="cursor: move;" class="widget-head"> 
