--- a/templates/listPatientAllergies.vm
+++ b/templates/listPatientAllergies.vm
@@ -1,8 +1,5 @@
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="Allergies$patient_id">
-<thead><tr><th>Product</th><th>Reaction</th></tr></thead><tbody>
+<a onclick="alert('Method to add a new allergy goes here')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
 #foreach( $allergy in $allergies)
-<tr class="gradeX"><td value="$allergy.product.value">$allergy.product.value</td><td value="$allergy.reaction.value">$allergy.reaction.value</td></tr>
+    <b>$allergy.product.value</b><br/>
+    <span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>Reaction: $allergy.reaction.value<br clear="all"/>
 #end
-</tbody>
-<table>
-
