--- a/templates/listPatientVitals.vm
+++ b/templates/listPatientVitals.vm
@@ -8,7 +8,13 @@
 					<tr><td>
 					Vitals on</td>
 					<td>${vitalDetail.resultDateTime.low.month}/${vitalDetail.resultDateTime.low.day}/
-					${vitalDetail.resultDateTime.low.year}@${vitalDetail.resultDateTime.low.hour}:${vitalDetail.resultDateTime.low.minute}</td></tr>
+					${vitalDetail.resultDateTime.low.year}@${vitalDetail.resultDateTime.low.hour}:
+					#if ($vitalDetail.resultDateTime.low.minute == 0)
+						00
+					#else
+						${vitalDetail.resultDateTime.low.minute}
+					#end	
+					</td></tr>
 					#set ($print = 1)
 				#end
 				<tr><td>$vitalDetail.resultType.value</td>
