Horizontal scroll bar on widgets no longer displays Vertical scroll bar on symptoms no longer displays Changed so that all processScript uses widgetInfo to run procedures.

--- a/templates/listHistoryTemplate.vm
+++ b/templates/listHistoryTemplate.vm
@@ -1,6 +1,6 @@
 #set ( $count=0)
 #set ( $trueFlag = "true")
-<div class="ui-widget top-panel" id="patient_history">
+<div class="" id="patient_history">
 
 #foreach( $category in $categories  )
 		<br/>	
