Saves all iNettuts properly including colors, titles, and collapsed information; save doesn't work correctly with non-iNettuts elements (such as Timeline)

--- a/templates/inettutsHead.vm
+++ b/templates/inettutsHead.vm
@@ -1,15 +1,15 @@
 
-<div class="widget color-2" id="yellow-widget$id">
+<div class="widget color-$color_num" id="yellow-widget$id">
 <div id = ${name}${rep_patient_id} class = "id">
 
     	<div style="cursor: move;" class="widget-head"> 
-        <a href="#" class="collapse">COLLAPSE</a><h3>$name</h3><a href="#" class="remove">CLOSE</a><a href="#" class="edit">EDIT</a><a href="#" class="maximize">MAXIMIZE</a>
+        <a href="#" class="collapse">COLLAPSE</a><h3>$label</h3><a href="#" class="remove">CLOSE</a><a href="#" class="edit">EDIT</a><a href="#" class="maximize">MAXIMIZE</a>
     	</div>
     <div class="edit-box" style="display: none;">
         <ul>
             <li class="item">
                 <label>Change the title?</label>
-                <input value="$name"/>
+                <input value="$label"/>
             </li>
         </ul>
         <li class="item">
